--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -2,10 +2,11 @@
   .container-fluid
     .row
       .col-3.d-flex.flex-column
-        .card.card-inverse{style: "background-color: #333; border-color: #333; flex-grow: 1;"}
+        .card.card-outline-secondary.bg-faded{style: "flex-grow: 1;"}
           .card-block
             %h3.card-title Admin
             %ul
+              %li= link_to "Event settings", edit_event_path(@event)
               %li= link_to "Pages", event_pages_path(@event)
               %li= link_to "Files", event_cms_files_path(@event)
       .col
