Navigation items, lots of old-skool JavaScript

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -9,6 +9,7 @@
               %li= link_to "Event settings", edit_event_path(@event)
               %li= link_to "Pages", event_pages_path(@event)
               %li= link_to "Files", event_cms_files_path(@event)
+              %li= link_to "Navigation bar", event_navigation_items_path(@event)
       .col
         = yield
 
