--- a/app/views/cadmus/pages/index.html.haml
+++ b/app/views/cadmus/pages/index.html.haml
@@ -1,7 +1,20 @@
 %h1 Pages in #{@event.name}
 
-%ul
+%ul.list-group.mb-4
   - @pages.each do |page|
-    %li= link_to page.name, [@event, :edit, page]
+    %li.list-group-item
+      .row.w-100
+        .col
+          = page.name
+          %code
+            %small
+              - if page == @event.root_page
+                - page_path = event_path(@event)
+              - else
+                - page_path = event_page_path(@event, page)
+              = link_to page_path, page_path, target: '_blank'
+        .col.text-right
+          = link_to "Edit", [@event, :edit, page], class: 'btn btn-secondary btn-sm'
+          = link_to "Delete", [@event, page], method: 'DELETE', "data-confirm" => "Are you sure you want to delete this page?", class: 'btn btn-danger btn-sm'
 
 = link_to "New page", [@event, :new, :page], class: 'btn btn-primary'
