--- a/app/views/navigation_items/edit.html.haml
+++ b/app/views/navigation_items/edit.html.haml
@@ -3,20 +3,22 @@
     %h1 Navigation #{@navigation_item.item_type}: #{@navigation_item.title}
   = link_to "Delete", [@event, @navigation_item], method: 'DELETE', "data-confirm" => "Are you sure you want to delete this navigation #{@navigation_item.item_type}?", class: 'btn btn-danger'
 
+%ol.breadcrumb
+  %li.breadcrumb-item= link_to "Navigation bar", event_navigation_items_path(@event)
+  - if @navigation_item.parent
+    %li.breadcrumb-item= link_to @navigation_item.parent.title, [:edit, @event, @navigation_item.parent]
+  %li.breadcrumb-item.active= @navigation_item.title
+
+- if @navigation_item.item_type == 'section'
+  %ul.list-group.navigation-item-list.mb-4{"data-sort-url" => sort_event_navigation_items_path(@event)}
+    = render partial: 'navigation_item', collection: @navigation_item.children.order(:position)
+
 .card
   .card-header Settings
   .card-block
     = render partial: 'form', locals: { navigation_item: @navigation_item }
 
 - if @navigation_item.item_type == 'section'
-  .card.mt-4
-    .card-header Links
-    .card-block
-      %ul
-        - @navigation_item.children.order(:position).each do |item|
-          %li
-            = link_to item.title, [:edit, @event, item]
-
   .card.mt-4
     .card-header Add a link to this section
     .card-block
