--- a/app/views/navigation_items/index.html.haml
+++ b/app/views/navigation_items/index.html.haml
@@ -1,17 +1,10 @@
 %h1 Navigation for #{@event.name}
 
+%ol.breadcrumb
+  %li.breadcrumb-item.active Navigation bar
+
 %ul.list-group.navigation-item-list{"data-sort-url" => sort_event_navigation_items_path(@event)}
-  - @navigation_items.root.order(:position).each do |item|
-    %li.list-group-item{"data-navigation-item-id" => item.id}
-      .row.w-100
-        .col.drag-handle{style: 'flex-shrink: 1; flex-grow: 0;'}
-          = fa_icon 'bars'
-        .col
-          %strong #{item.item_type.humanize}:
-          = item.title
-        .col.text-right
-          = link_to "Edit", [:edit, @event, item], class: 'btn btn-secondary btn-sm'
-          = link_to "Delete", [@event, item], method: 'DELETE', "data-confirm" => "Are you sure you want to delete this navigation #{item.item_type}?", class: 'btn btn-danger btn-sm'
+  = render partial: 'navigation_item', collection: @navigation_items.root.order(:position)
 
 .card.mt-4
   .card-header Add a navigation item
