--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,11 +5,12 @@
         .card.card-outline-secondary.bg-faded{style: "flex-grow: 1;"}
           .card-block
             %h3.card-title Admin
-            %ul
-              %li= link_to "Event settings", edit_event_path(@event)
-              %li= link_to "Pages", event_pages_path(@event)
-              %li= link_to "Files", event_cms_files_path(@event)
-              %li= link_to "Navigation bar", event_navigation_items_path(@event)
+            %nav.flex-column
+              = admin_nav_link_to "Event settings", edit_event_path(@event)
+              = admin_nav_link_to "Pages", event_pages_path(@event)
+              = admin_nav_link_to "Layouts", event_cms_layouts_path(@event)
+              = admin_nav_link_to "Files", event_cms_files_path(@event)
+              = admin_nav_link_to "Navigation bar", event_navigation_items_path(@event)
       .col
         = yield
 
