Allow customizing the navbar classes

--- a/app/views/layouts/_non_cms_navigation_bar.html.haml
+++ b/app/views/layouts/_non_cms_navigation_bar.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-light.navbar-toggleable-md.bg-faded
+%nav.navbar.navbar-toggleable-md{class: navbar_classes}
   = render partial: 'layouts/navigation_toggle'
   = link_to "Eventlite", root_url, class: 'navbar-brand'
 
