Beginnings of ticket type admin

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -11,6 +11,7 @@
               = admin_nav_link_to "Layouts", event_cms_layouts_path(@event)
               = admin_nav_link_to "Files", event_cms_files_path(@event)
               = admin_nav_link_to "Navigation bar", event_navigation_items_path(@event)
+              = admin_nav_link_to "Tickets", event_ticket_types_path(@event)
       .col
         = yield
 
