--- a/app/views/ticket_types/index.html.haml
+++ b/app/views/ticket_types/index.html.haml
@@ -21,4 +21,5 @@
             %span.text-danger
               (#{canceled_count} canceled)
 
+= link_to "View tickets", event_tickets_path(@event), class: 'btn btn-secondary'
 = link_to "New ticket type", new_event_ticket_type_path(@event), class: 'btn btn-primary'
