Self-service account management

--- a/app/views/layouts/_navigation_right.html.haml
+++ b/app/views/layouts/_navigation_right.html.haml
@@ -6,6 +6,7 @@
       .dropdown-menu
         - if current_user.admin? && @event
           = link_to "Admin", event_admin_path(@event), class: 'dropdown-item'
+        = link_to "My account", edit_user_registration_path, class: 'dropdown-item'
         = link_to "Log out", destroy_user_session_path, method: 'DELETE', class: 'dropdown-item'
   - else
     %li= link_to "Log in", new_user_session_path, class: 'nav-link'
