--- a/app/views/ticket_charges_mailer/confirmation.html.haml
+++ b/app/views/ticket_charges_mailer/confirmation.html.haml
@@ -1,24 +1,1 @@
-%h1 Purchase confirmation
-
-%p
-  Thanks for your ticket purchase!  You've bought a #{@ticket.ticket_type.name} ticket for #{@ticket.event.name}.
-
-%table
-  %tr
-    %td Name
-    %td= @ticket.name
-  %tr
-    %td Email
-    %td= @ticket.email
-  %tr
-    %td Phone
-    %td= @ticket.phone
-  %tr
-    %td Event
-    %td= @ticket.event.name
-  %tr
-    %td Ticket type
-    %td= @ticket.ticket_type.name
-  %tr
-    %td Purchase amount
-    %td= humanized_money_with_symbol(@ticket.payment_amount, no_cents_if_whole: false)
+= cadmus_renderer.render(@ticket.ticket_type.email_liquid_template, :html, assigns: { 'ticket' => @ticket, 'receipt' => @receipt })
