--- a/app/views/ticket_types/index.html.haml
+++ b/app/views/ticket_types/index.html.haml
@@ -7,6 +7,7 @@
   .card.mb-4
     .card-header
       .float-right
+        = link_to "Preview email", preview_email_event_ticket_type_path(@event, ticket_type), class: 'btn btn-secondary btn-sm'
         = link_to "Edit", edit_event_ticket_type_path(@event, ticket_type), class: 'btn btn-secondary btn-sm'
       = ticket_type.name
       (#{humanized_money_with_symbol(ticket_type.price, no_cents_if_whole: false)})
