--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,8 @@
 
 @import "bootstrap";
 @import "font-awesome";
+
+.form-control-monospace {
+  font-family: $font-family-monospace;
+  font-size: 90%;
+}
