--- a/app/views/cadmus/pages/_form.html.haml
+++ b/app/views/cadmus/pages/_form.html.haml
@@ -13,14 +13,12 @@
 - default_layout_label = @event.default_cms_layout ? "Default (currently set as #{@event.default_cms_layout.name})" : "Default layout"
 = f.collection_select :cms_layout_id, @event.cms_layouts.order(:name), :id, :name, include_blank: default_layout_label, label: 'Layout'
 
-.row
-  .col-lg-6
-    = find_and_preserve(f.text_area(:content, :style => "font-family: monospace; min-height: 40vh;", :class => "cadmus-previewable-html", :"data-preview-in" => "html-preview"))
-  .col-lg-6
-    .card.card-outline-secondary.my-4
-      .card-header Preview
-      .card-block
-        #html-preview
+.d-flex.flex-row.align-items-stretch.my-4
+  = find_and_preserve(f.text_area(:content, :style => "min-height: 40vh; flex-grow: 1;", :class => "cadmus-previewable-html form-control-monospace", :"data-preview-in" => "html-preview", wrapper: { class: 'd-flex flex-column mr-2', style: 'min-width: 50%;' }))
+  .card.card-outline-secondary
+    .card-header Preview
+    .card-block
+      #html-preview
 
 = f.submit class: "btn btn-primary"
 
