--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -3,7 +3,7 @@
     .row
       .col-3.d-flex.flex-column
         .card.card-outline-secondary.bg-faded{style: "flex-grow: 1;"}
-          .card-block
+          .card-body
             %h3.card-title Admin
             %nav.flex-column
               = admin_nav_link_to "Event settings", edit_event_path(@event)
