--- a/app/views/navigation_items/index.html.haml
+++ b/app/views/navigation_items/index.html.haml
@@ -8,5 +8,5 @@
 
 .card.mt-4
   .card-header Add a navigation item
-  .card-block
+  .card-body
     = render partial: 'form', locals: { navigation_item: @event.navigation_items.new }
