--- a/app/views/ticket_types/index.html.haml
+++ b/app/views/ticket_types/index.html.haml
@@ -11,7 +11,7 @@
         = link_to "Edit", edit_event_ticket_type_path(@event, ticket_type), class: 'btn btn-secondary btn-sm'
       = ticket_type.name
       (#{humanized_money_with_symbol(ticket_type.price, no_cents_if_whole: false)})
-    .card-block
+    .card-body
       .progress
         .progress-bar{role: 'progressbar', "aria-valuenow" => sold_count, "aria-valuemin" => 0, "aria-valuemax" => ticket_type.number_available, style: "width: #{((sold_count.to_f / ticket_type.number_available.to_f) * 100).round}%"}
       .text-right
