--- a/app/views/cadmus/pages/_form.html.haml
+++ b/app/views/cadmus/pages/_form.html.haml
@@ -17,7 +17,7 @@
   = find_and_preserve(f.text_area(:content, :style => "min-height: 40vh; flex-grow: 1;", :class => "cadmus-previewable-html form-control-monospace", :"data-preview-in" => "html-preview", wrapper: { class: 'd-flex flex-column mr-2', style: 'min-width: 50%;' }))
   .card.card-outline-secondary
     .card-header Preview
-    .card-block
+    .card-body
       #html-preview
 
 = f.submit class: "btn btn-primary"
@@ -27,5 +27,3 @@
   $(document).ready(function(){
     $('.cadmus-previewable-html').cadmusPreviewableHtml();
   });
-
-
