--- a/app/views/layouts/_navigation_right.html.haml
+++ b/app/views/layouts/_navigation_right.html.haml
@@ -4,7 +4,7 @@
       %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
         = current_user.email
       .dropdown-menu
-        - if current_user.admin? && @event
+        - if current_user.admin? && @event&.id
           = link_to "Admin", event_admin_path(@event), class: 'dropdown-item'
         = link_to "My account", edit_user_registration_path, class: 'dropdown-item'
         = link_to "Log out", destroy_user_session_path, method: 'DELETE', class: 'dropdown-item'
