--- a/app/views/tickets/_form.html.haml
+++ b/app/views/tickets/_form.html.haml
@@ -1,5 +1,5 @@
 = javascript_include_tag "https://js.stripe.com/v2/"
-:javascript
-  Stripe.setPublishableKey(#{Rails.configuration.stripe[:publishable_key].to_json});
+%script{type: 'text/javascript'}
+  Stripe.setPublishableKey(#{Rails.configuration.stripe[:publishable_key].to_json.html_safe});
 = bootstrap_form_for event_ticket_charges_path(@event) do
   = react_component "TicketPurchaseForm", ticketTypes: @event.ticket_types.map { |ticket_type| { id: ticket_type.id, name: ticket_type.name, price: ticket_type.price.fractional, formattedPrice: humanized_money_with_symbol(ticket_type.price, no_cents_if_whole: false), available: ticket_type.available? } }, createChargeUrl: event_ticket_charges_url(@event), purchaseCompleteUrl: after_sale_url
