Correct the default classes

--- a/app/views/cadmus/layouts/_form.html.erb
+++ b/app/views/cadmus/layouts/_form.html.erb
@@ -6,7 +6,7 @@
 <div class="form-group">
   <%= f.label :navbar_classes %>
   <%= f.text_field :navbar_classes, label: "Navigation bar CSS classes", class: 'form-control form-control-monospace' %>
-  <small>Overrides the default CSS classes for the Bootstrap navigation bar (by default, <code>navbar-light bg-faded</code>)</small>
+  <small>Overrides the default CSS classes for the Bootstrap navigation bar (by default, <code>navbar-light bg-light</code>)</small>
 </div>
 
 <div class="form-group">
