--- a/app/views/layouts/_cms_navigation_bar.html.haml
+++ b/app/views/layouts/_cms_navigation_bar.html.haml
@@ -1,6 +1,6 @@
 %nav.navbar.navbar-expand-md{class: navbar_classes}
   = render partial: 'layouts/navigation_toggle'
-  = link_to @event.name || 'Eventlite', @event, class: 'navbar-brand'
+  = link_to @event.name || site_settings.site_title, @event, class: 'navbar-brand'
 
   #main-navbar-collapse-1.collapse.navbar-collapse
     %ul.nav.navbar-nav.mr-auto
